Update cisc 3140 Assignment 5.1

--- a/cisc 3140 Assignment 5.1
+++ b/cisc 3140 Assignment 5.1
@@ -1,4 +1,5 @@
-Filter 1 column from a CSV file. Extract out the artist names from the CSV file that can be downloaded from the Spotify Charts website (https://spotifycharts.com/regional). Ensure that the artist names are unique and sorted. Retain the header as the top of the file.
+Filter 1 column from a CSV file. Extract out the artist names from the CSV file that can be downloaded from the Spotify Charts website 
+(https://spotifycharts.com/regional). Ensure that the artist names are unique and sorted. Retain the header as the top of the file.
 
 Script started on 2020-02-26 22:28:45-0500
 ]0;rfeng@Ray: /mnt/c/Users/Ray[01;32mrfeng@Ray[00m:[01;34m/mnt/c/Users/Ray[00m$ cd downloads
