--- a/cisc 3140 Assignment 5.2
+++ b/cisc 3140 Assignment 5.2
@@ -1,4 +1,5 @@
-Download a zip file from MovieLens (https://grouplens.org/datasets/movielens/latest/) using the command line interface (CLI) such as curl or wget and unzip the .zip file. It would be okay to choose the smallest (recent data) dataset.
+Download a zip file from MovieLens (https://grouplens.org/datasets/movielens/latest/) using the command line interface (CLI) such as 
+curl or wget and unzip the .zip file. It would be okay to choose the smallest (recent data) dataset.
 
 Script started on 2020-02-27 13:12:03-0500
 ]0;rfeng@Ray: /mnt/c/Users/Ray/downloads[01;32mrfeng@Ray[00m:[01;34m/mnt/c/Users/Ray/downloads[00m$ wget files.grouplens.org/datasets/movielens/ml-latest-small.zip
