Update cisc 3140 Assignment 5.4

--- a/cisc 3140 Assignment 5.4
+++ b/cisc 3140 Assignment 5.4
@@ -1,4 +1,5 @@
-Extract out the movie names from movie.csv and sort the titles by movie year to ascending order. Retain the header as the top of the file. It is okay to limit to about 200 names in a sample. Focus more on the operations to sort and parse out text.
+Extract out the movie names from movie.csv and sort the titles by movie year to ascending order. Retain the header as the top of the 
+file. It is okay to limit to about 200 names in a sample. Focus more on the operations to sort and parse out text.
 
 Script started on 2020-02-27 16:30:29-0500
 ]0;rfeng@Ray: /mnt/c/Users/Ray/downloads[01;32mrfeng@Ray[00m:[01;34m/mnt/c/Users/Ray/downloads[00m$ sort -n '(' -k2 | head -200 movies.csv
