Update cisc 3140 Assignment 5.2

--- a/cisc 3140 Assignment 5.2
+++ b/cisc 3140 Assignment 5.2
@@ -2,6 +2,7 @@ Download a zip file from MovieLens (https://grouplens.org/datasets/movielens/lat
 curl or wget and unzip the .zip file. It would be okay to choose the smallest (recent data) dataset.
 
 Script started on 2020-02-27 13:12:03-0500
+//wget downloads the files over the internet
 ]0;rfeng@Ray: /mnt/c/Users/Ray/downloads[01;32mrfeng@Ray[00m:[01;34m/mnt/c/Users/Ray/downloads[00m$ wget files.grouplens.org/datasets/movielens/ml-latest-small.zip
 --2020-02-27 13:12:16--  http://files.grouplens.org/datasets/movielens/ml-latest-small.zip
 Resolving files.grouplens.org (files.grouplens.org)... 128.101.65.152
@@ -16,6 +17,7 @@ ml-latest-small.zip           100%[=============================================
 
 2020-02-27 13:12:16 (5.26 MB/s) - ‘ml-latest-small.zip’ saved [978202/978202]
 
+//unzips the file
 ]0;rfeng@Ray: /mnt/c/Users/Ray/downloads[01;32mrfeng@Ray[00m:[01;34m/mnt/c/Users/Ray/downloads[00m$ unzip ml-latest-small.zip
 Archive:  ml-latest-small.zip
    creating: ml-latest-small/
