Update cisc 3140 Assignment 5.4

--- a/cisc 3140 Assignment 5.4
+++ b/cisc 3140 Assignment 5.4
@@ -2,6 +2,7 @@ Extract out the movie names from movie.csv and sort the titles by movie year to 
 file. It is okay to limit to about 200 names in a sample. Focus more on the operations to sort and parse out text.
 
 Script started on 2020-02-27 16:30:29-0500
+//sorts the second column based on numbers while also previewing the first 200 rows of the csv
 ]0;rfeng@Ray: /mnt/c/Users/Ray/downloads[01;32mrfeng@Ray[00m:[01;34m/mnt/c/Users/Ray/downloads[00m$ sort -n '(' -k2 | head -200 movies.csv
 movieId,title,genres
 
@@ -402,11 +403,6 @@ movieId,title,genres
 231,Dumb & Dumber (Dumb and Dumber) (1994),Adventure|Comedy
 
 232,Eat Drink Man Woman (Yin shi nan nu) (1994),Comedy|Drama|Romance
-
-done
-}
-
-[1]+  Stopped                 sort -nt '(' -k2 | head -200 movies.csv
 
 ]0;rfeng@Ray: /mnt/c/Users/Ray/downloads[01;32mrfeng@Ray[00m:[01;34m/mnt/c/Users/Ray/downloads[00m$ exit
 exit
