Update cisc 3140 Assignment 5.4

--- a/cisc 3140 Assignment 5.4
+++ b/cisc 3140 Assignment 5.4
@@ -2,7 +2,7 @@ Extract out the movie names from movie.csv and sort the titles by movie year to 
 file. It is okay to limit to about 200 names in a sample. Focus more on the operations to sort and parse out text.
 
 Script started on 2020-02-27 16:30:29-0500
-//sorts the second column based on numbers while also previewing the first 200 rows of the csv
+//sorts the second column based on numbers while also previewing the first 200 rows of the csv and using the '(' as the delimiter
 ]0;rfeng@Ray: /mnt/c/Users/Ray/downloads[01;32mrfeng@Ray[00m:[01;34m/mnt/c/Users/Ray/downloads[00m$ sort -n '(' -k2 | head -200 movies.csv
 movieId,title,genres
 
