--- a/Assignment 6.1
+++ b/Assignment 6.1
@@ -1,3 +1,5 @@
+Check if an input string is a palindrome, return a boolean value. Allow list input type. Required implementation: Write your own reverser function.
+
 (define isPalindrome?
 (lambda (input-str)
   (letrec ((analyzer
