--- a/Assignment 6.2
+++ b/Assignment 6.2
@@ -1,2 +1,4 @@
+Create a lambda expression that evaluates a sum of series given a number input n. Combine this lambda expression with a map so that you can pass in a list of numbers and get the sum of series that returns a list.
+
 (define (sum L)
   (apply + L))
