--- a/Assignment 6.3
+++ b/Assignment 6.3
@@ -1,1 +1,14 @@
 Error Checking
+
+;; create binding for error
+(define error #f)
+
+;; capture top level continuation
+;;  assign a function to error, allowing a variable number of arguments to be passed
+(call-with-current-continuation (lambda (k)
+              (set! error
+                (lambda error-arguments
+                  (display ">>>> ERROR ")
+                  (newline)
+                  (k error-arguments)))
+              )) 
